*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
@@ -13,14 +13,23 @@
       Setting execution arguments
     </h1>
     <p>
-      Execution arguments may be set for a launch configuration
+      If you want to specify execution arguments for your program, you must use
+      a launch configuration that describes exactly how the program is to be
+      launched.
     </p>
     <ol>
       <li>
-        From the drop-down menu on the <strong>Debug</strong> button in the workbench toolbar, select <strong>Debug...</strong>.
+        To work with launch configurations, select <strong>Run...</strong>
+        or&nbsp;<strong> Debug...</strong> from the workbench <strong>Run</strong>
+        menu.&nbsp; This will open a configuration dialog that lists the
+        different kinds of program launch configurations.&nbsp; Launch
+        configurations for Java programs are shown underneath <strong>Java
+        Application </strong>in this list.&nbsp;
       </li>
       <li>
-        In the launch configuration dialog, select the launch configuration you wish to specify execution arguments for
+        Select the launch configuration you want to use or create a new launch
+        configuration by pushing the <strong>New</strong> button after selecting
+        <strong>Java Application</strong>.
       </li>
       <li>
         On the <strong>Arguments</strong> tab for the configuration, you can use the following fields as needed: 
@@ -41,19 +50,13 @@
         </ul>
       </li>
       <li>
-        Click <strong>Apply</strong> or <strong>Debug</strong> when you are done. Every time you launch this configuration, these execution
+        Click <strong>Apply</strong> or&nbsp; <strong>Close</strong> when you are done. Every time you launch this configuration, these execution
         arguments will be used.
       </li>
     </ol>
     <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
-    </p>
-    <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
-       <a href="../tasks/tasks-136.htm">Stepping through the execution of a program</a><br>
-       <a href="../tasks/tasks-107.htm">Viewing compilation errors and warnings</a>
     </p>
     <p>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
