--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
@@ -31,15 +31,18 @@
         In the Package Explorer, select the Java compilation unit or class file you want to launch.
       </li>
       <li>
-        If you want to debug the program first, in the top menu bar select the <strong>Run &gt; Debug As &gt; Java Application</strong> Otherwise, select
-        <strong>Run &gt; Run As &gt; Java Application</strong>
+        If you want to debug the program first, in the workbench menu bar select <strong>Run &gt; Debug As &gt; Java Application</strong>.&nbsp;
+        Otherwise, select
+        <strong>Run &gt; Run As &gt; Java Application.</strong>
       </li>
       <li>
-        If you selected a Java program, your program is now launched in the mode you selected, and the launch appears in the Debug view. If you selected a Java project, you may be
-        prompted to select the class you wish to launch. Only those classes that define a <em>main</em> method are available to select. If only one class with a main method is
-        found in the project, that class is automatically chosen. The chosen class is launched in the mode you selected.
+        Your program is now launched in the mode you selected, and the launch appears in the Debug view.&nbsp;
       </li>
     </ol>
+    <p>You can also launch a Java program by selecting a project instead of the
+    compilation unit or class file.&nbsp; You will be prompted to select a class
+    from those classes that define a <em>main</em> method.&nbsp; (If only one class with a main method is
+        found in the project, that class is launched as if you selected it.)</p>
     <h2>
       Launching from other views and editors
     </h2>
