--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-131.htm
@@ -13,7 +13,8 @@
       Relaunching a program
     </h1>
     <p>
-      The workbench keeps a history of each launched and debugged program. To relaunch, do one of the following:
+      The workbench keeps a history of each launched and debugged program. To
+      relaunch a program, do one of the following:
     </p>
     <ul>
       <li>
@@ -32,17 +33,15 @@
     </p>
     <ul>
       <li>
-        Click the <strong>Run</strong> or <strong>Debug</strong> buttons.
+        Click the <strong>Run</strong> or <strong>Debug</strong>  buttons
+        (without using the button pull-down menu).
       </li>
       
-  <li> From the menu bar <strong>Run</strong> &gt; <strong>Run Last Launched (<kbd>Ctrl+F11</kbd>)</strong>, 
-    or <strong>Run</strong> &gt; <strong>Debug Last Launched (<kbd>F11</kbd>)</strong>. 
+  <li> Select <strong>Run</strong> &gt; <strong>Run Last Launched (<kbd>Ctrl+F11</kbd>)</strong>, 
+    or <strong>Run</strong> &gt; <strong>Debug Last Launched (<kbd>F11</kbd>)</strong>
+    from the workbench menu bar. 
   </li>
     </ul>
-    <p>
-      <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
-    </p>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
