--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-127.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-127.htm
@@ -13,7 +13,25 @@
       Running a Java program
     </h1>
     <p>
-      You can run or debug (i.e., launch) your Java programs in the workbench.
+      You can run your Java programs from the workbench.&nbsp; Running a program
+    will start up the Java VM and execute the main method for your
+    program.&nbsp; Output and errors will be reported to the console.
+    </p>
+    <p>To run a Java program, select <strong>Run &gt;Run As &gt;Java Application</strong>
+    from the workbench menu bar.&nbsp;&nbsp;
+    </p>
+    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+       <a href="tasks-124.htm">Choosing a JRE for launching a project</a><br>
+       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
+       <a href="../tasks/tasks-129.htm">Setting execution arguments</a>
+    </p>
+    <p>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+      <a href="../reference/ref-4.htm">Run and debug actions</a><br>
+       <a href="../reference/ref-12.htm">Console preferences</a>
+    </p>
+    <p>&nbsp;
     </p>
     <p>
       
