*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-129.htm
@@ -13,26 +13,25 @@
       Setting execution arguments
     </h1>
     <p>
-      If you want to specify execution arguments for your program, you must use
-      a launch configuration that describes exactly how the program is to be
-      launched.
+      If you want to specify execution arguments for your program, you must
+      define a launch configuration that specifies the arguments.
     </p>
     <ol>
       <li>
-        To work with launch configurations, select <strong>Run...</strong>
-        or&nbsp;<strong> Debug...</strong> from the workbench <strong>Run</strong>
-        menu.&nbsp; This will open a configuration dialog that lists the
-        different kinds of program launch configurations.&nbsp; Launch
+        Select <strong>Run &gt;Run...</strong>
+        (or&nbsp;<strong>Run &gt;Debug...)</strong> from the workbench <strong>Run</strong>
+        menu to open the list of launch configurations.&nbsp;&nbsp; Launch
         configurations for Java programs are shown underneath <strong>Java
         Application </strong>in this list.&nbsp;
       </li>
       <li>
-        Select the launch configuration you want to use or create a new launch
+        Create a new launch
         configuration by pushing the <strong>New</strong> button after selecting
         <strong>Java Application</strong>.
       </li>
       <li>
-        On the <strong>Arguments</strong> tab for the configuration, you can use the following fields as needed: 
+        On the <strong>Arguments</strong> tab for the configuration, you can
+        specify the following fields as necessary: 
         <ul>
           <li>
             <strong>Program Arguments</strong>: Application-specific values that your code is expecting (a user name or a URL for locating help files, for
@@ -56,7 +55,10 @@
     </ol>
     <p>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+      <a href="../tasks/tasks-java-local-configuration.htm">Creating a Java Application launch
+      configuration</a><br>
       <a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
+      <br>
     </p>
     <p>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
