--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-debug-launch.htm
@@ -10,41 +10,32 @@
   </head>
   <body>
     <h1>
-      Launching a Java program
+      Launching a Java program in debug mode
     </h1>
-    <p>The simplest way to launch a Java program is to run it using the <strong> Java Application </strong>
-    launch configuration.&nbsp; This launch configuration uses information
-    derived from the workbench preferences and your program's Java project to launch the program.
+    <p>
+      Launching a program in debug mode allows you to suspend and resume the
+      program, inspect variables, and evaluate expressions using the debugger.
+    </p>
+    <p>
+      To launch a Java program in debug mode,
     </p>
     <ol>
       <li>
         In the Package Explorer, select the Java compilation unit or class file you want to launch.
       </li>
       <li>
-        Select
-        <strong>Run &gt; Run As &gt; Java Application </strong>in the workbench
-        menu bar.&nbsp;
+        Select <strong>Run &gt; Debug As &gt; Java Application</strong>.&nbsp;&nbsp;
       </li>
       <li>
-        Your program is now launched, and text output is shown in the Console.
+        Your program is now launched and the launched process appears in the Debug view.&nbsp;
       </li>
     </ol>
-    <p>You can also launch a Java program by selecting a project instead of the
+    <p>You can also debug a Java program by selecting a project instead of the
     compilation unit or class file.&nbsp; You will be prompted to select a class
     from those classes that define a <em>main</em> method.&nbsp; (If only one class with a main method is
         found in the project, that class is launched as if you selected it.)</p>
-    <p>You can launch a program from an open editor by using <strong>Run &gt;
-    Run As &gt; Java Application </strong>in the editor's popup
-    menu.&nbsp;&nbsp;</p>
-    <h2>
-      Launching with another launch configuration type
-    </h2>
-    <p>
-      You may also launch a program using a launch configuration type other than
-      <strong> Java Application</strong>.&nbsp;&nbsp;
-      To do this, select the launch configuration type you wish to use from the menu options under <strong>Run
-      &gt; Run As</strong>.
-    </p>
+    <p>You can debug a program from an open editor by using <strong>Run &gt; Debug As &gt; Java Application
+    </strong>in the editor's popup menu.</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-6.htm">Java views</a><br>
