--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-126.htm
@@ -13,6 +13,17 @@
       Running and debugging
     </h1>
     <p>
+      You may launch your Java programs from the workbench.&nbsp; The programs may be launched in either run or debug mode.
+    </p>
+    <ul>
+      <li>
+        In run mode, the program executes, but the execution may not be suspended or examined.
+      </li>
+      <li>
+        In debug mode, execution may be suspended and resumed, variables may be inspected, and expressions may be evaluated.
+      </li>
+    </ul>
+    <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a><br>
        <a href="../concepts/cremdbug.htm">Remote debugging</a><br>
