--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-java-local-configuration.htm
@@ -10,62 +10,73 @@
   </head>
   <body>
     <h1>
-      Creating a local Java application launch configuration
+      Creating a Java application launch configuration
     </h1>
     <p>
-      You can use launch configurations to control various aspects of launching a Java application. The <strong>Java Application</strong> launch configuration type is used to
-      launch local Java applications. Java application launch configurations can be launched in run or debug mode.
+      When you choose <strong>Run &gt;Run As &gt;Java Application </strong>to
+      launch your class, you are running your class using a generic <strong>Java
+      Application</strong> launch configuration that derives most of the launch
+      parameters from your Java project and your workbench preferences.&nbsp; In
+      some cases, you will want to override the derived parameters or specify
+      additional arguments.
     </p>
-    <ol class="UnorderedList">
+    <p>
+      You do this by creating your own <strong>Java Application</strong> launch
+      configuration.&nbsp;
+    </p>
+    <ol>
       <li>
-        From the <strong>Run</strong> menu, or the <strong>Debug</strong> drop down menu, select <strong>Debug...</strong>. This opens the launch configuration dialog, where
-        launch configurations can be created, modified, and deleted. NOTE: Selecting <strong>Run...</strong> from the <strong>Run</strong> menu or <strong>Run</strong> drop down
-        menu has the same effect.
+        Select <strong>Run &gt;Run... </strong>or <strong>Run &gt;Debug...</strong>
+        from the workbench menu bar.&nbsp; This opens a dialog that lets you
+        create, modify, and delete launch configurations of different types.
       </li>
       <li>
         Select <strong>Java Application</strong> in the left hand list of launch configuration types, and press <strong>New</strong>. This will create a new launch configuration
-        for a local Java application. The newly created launch configuration will be populated with default values for launching the selected resource in the workbench (if any).
-      </li>
-      <li>
-        The <strong>Main</strong> tab defines the class to be launched. Enter the name of the project containing the class to launch in the project field, and the fully qualified
-        name of the main class in the the Main class field. NOTE: A project does not have to be specified, but when a project is specified, it is used to calculate a default
-        classpath, source lookup path, and JRE used to run or debug the application.
-      </li>
-      <li>
-        The <strong>Arguments</strong> tab defines the arguments to be passed to the application and to the virtual machine (if any). As well, the working directory to be used by
-        the launched application can be defined here.
-      </li>
-      <li>
-        The <strong>JRE</strong> tab defines the JRE used to run or debug the application. This tab allows you to select from the already defined JREs, and allows you to define
-        new JREs.
-      </li>
-      <li>
-        The <strong>Classpath</strong> tab defines the location of class files used when running or debugging an application. By default, the user and bootstrap class locations
-        are derived from the associated project&#39;s build path. However, these settings may be overridden if required.
-      </li>
-      <li>
-        The <strong>Source</strong> tab defines the location of source files used to display source when debugging a Java application. By default, these settings are derived from
-        the associated project&#39;s build path. However, these settings may be overridden if required.
-      </li>
-      <li>
-        The <strong>Common</strong> tab defines the location of the launch configuration itself. By default, a launch configuration is stored as a file, locally with the workspace
-        meta data. However, a launch configuration may also be stored as a file in the workspace. This tab also controls which perspective becomes active when the launch
-        configuration is launched in run or debug mode.
+        for a Java application.&nbsp;The tabs on the right hand side allow you
+        control specific aspects of the launch.
       </li>
     </ol>
+    <blockquote>
+      <ul>
+        <li>The <strong>Main</strong> tab defines the class to be launched. Enter the name of the project containing the class to launch in the project field, and the fully qualified
+        name of the main class in the the Main class field.&nbsp;<br>
+          <br>
+        Note:&nbsp; You do not have to specify a project, but doing so allows a
+        default classpath, source lookup path, and JRE to be chosen.</li>
+        <li>The <strong>Arguments</strong> tab defines the arguments to be passed to the application and to the virtual machine (if any).
+          You can also specify the working directory to be used by
+        the launched application.</li>
+        <li>The <strong>JRE</strong> tab defines the JRE used to run or debug the application.
+          You can select a JRE from the already defined JREs, or define a new
+          JRE.</li>
+        <li>The <strong>Classpath</strong> tab defines the location of class files used when running or debugging an application. By default, the user and bootstrap class locations
+        are derived from the associated project&#39;s build path. You may
+          override these settings here.</li>
+        <li>The <strong>Source</strong> tab defines the location of source files used to display source when debugging a Java application. By default, these settings are derived from
+        the associated project&#39;s build path. You may override these settings
+          here.</li>
+        <li>The <strong>Common</strong> tab defines general information about
+          the launch configuration.&nbsp; You may choose to store the launch
+          configuration in a specific file and specify which perspectives become
+          active when the launch configuration is launched.</li>
+      </ul>
+    </blockquote>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
     </p>
     <p>
       <a href="../concepts/concepts-10.htm">Debugger</a><br>
-       <a href="../concepts/clocdbug.htm">Local debugging</a><br>
+       <a href="../concepts/clocdbug.htm">Local debugging</a>
     </p>
     <p>
+      <br>
       <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
     </p>
     <p>
-      <a href="../tasks/tasks-9.htm">Changing debugger launch options</a><br>
-       <a href="../tasks/tasks-126.htm">Running and debugging</a>
+      <a href="tasks-124.htm">Choosing a JRE for launching a project</a><br>
+      <a href="tasks-130.htm">Launching a Java program</a><br>
+      <a href="tasks-129.htm">Setting execution arguments<br>
+      </a><a href="../tasks/tasks-9.htm">Changing debugger launch options</a>
     </p>
     <p>
       <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
