*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-134.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-134.htm
@@ -13,11 +13,11 @@
       Suspending threads
     </h1>
     <p>
-      To suspend executing threads:
+      To suspend an executing thread:
     </p>
     <ol>
       <li>
-        In the Debug view, select a running thread.
+        Select the thread in the Debug view.
       </li>
       <li>
         Click the <strong><strong>Suspend</strong></strong> button in the Debug view toolbar. The thread suspends its execution. The current call stack for the thread is
@@ -25,11 +25,13 @@
       </li>
     </ol>
     <p>
-      When a thread is suspended and the cursor is placed over a variable in the Java editor, the value of that variable is displayed as hover help.
+      When a thread suspends, the top stack frame of the thread is automatically
+      selected.&nbsp; The Variables view shows the stack frame's variables and
+      their values.&nbsp; Complex variables can be further examined by expanding
+      them to show the values of their members.
     </p>
     <p>
-      When a thread suspends, the top stack frame of the thread is automatically selected. When a stack frame is selected, the visible variables in that stack frame are displayed
-      in the Variables view. Variables can be examined by expanding those variables that have children.
+      When a thread is suspended and the cursor is hovered over a variable in the Java editor, the value of that variable is displayed.
     </p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
