--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-135.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-135.htm
@@ -13,15 +13,15 @@
       Resuming the execution of suspended threads
     </h1>
     <p>
-      To resume the execution of suspended threads:
+      To resume the execution of a suspended threads:
     </p>
     <ol>
       <li>
-        Select a suspended thread or a stack frame in a suspended thread.
+        Select the thread or its stack frame in the Debug view.
       </li>
       <li>
         Click the <strong>Resume</strong> button in the Debug view toolbar (or press the <kbd>F8</kbd> key). The thread resumes its execution, and stack
-        frames are no longer displayed for the thread, and the Variables view is cleared.
+        frames are no longer displayed for the thread.&nbsp; The Variables view is cleared.
       </li>
     </ol>
     <p>
