--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-136.htm
@@ -13,8 +13,10 @@
       Stepping through the execution of a Java program
     </h1>
     <p>
-      When a thread is suspended, the step controls can be used to step through the execution of the program line-by-line. While performing a step operation, if a breakpoint is
-      encountered, execution suspends at the breakpoint, and the step operation ends.
+      When a thread is suspended, the step controls can be used to step through the execution of the program line-by-line.
+      If a breakpoint is encountered while performing a step operation,&nbsp;
+      the execution will suspend at the breakpoint and the step operation is
+      ended.
     </p>
     <h2>
       Step over
@@ -61,14 +63,16 @@
     </p>
     <ol>
       <li>
-        Place your cursor on the line at which you want the program to run and select <strong>Run to Line</strong> from the pop-up menu or use
-        <kbd>Ctrl+R</kbd>. Program execution is resumed and suspends just before the specified line is to be executed.
+        Place your cursor on the line at which you want the program to run.
       </li>
       <li>
-        It is possible that the line will never be hit and that the program will not suspend. Breakpoints and exceptions cause a thread to suspend before reaching the specified
-        line.
+        Select <strong>Run to Line</strong> from the pop-up menu or use
+        <kbd>Ctrl+R</kbd>. Program execution is resumed and suspends just before the specified line is to be executed.
       </li>
     </ol>
+    <p>It is possible that the line will never be hit and that the program will not suspend.&nbsp;</p>
+    <p> Breakpoints and exceptions can cause the thread to suspend before reaching the specified
+        line.</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/cbrkpnts.htm">Breakpoints</a><br>
