--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-137.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-137.htm
@@ -13,8 +13,12 @@
       Inspecting values
     </h1>
     <p>
-      When a thread suspends, the top stack frame of the thread is automatically selected. When a stack frame is selected, the visible variables in that stack frame are displayed
-      in the Variables view. Variables can be examined by expanding those variables that have children.
+      When stack frame is selected, you can see the visible variables in that
+      stack frame in the Variables view.
+    </p>
+    <p>
+      The Variables view shows the value of simple variables.&nbsp; Complex
+      variables can be examined by expanding them to show their members.
     </p>
     <p>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
