--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -12,9 +12,9 @@
     <h1>
       Evaluating expressions
     </h1>
-    <p>
-      When the VM suspends a thread, the debugger supports expression evaluation in the context of a stack frame in that thread.<br>
-       <strong>Note:</strong> Evaluations cannot be performed in threads that have been manually suspended.
+    <p>When the VM suspends a thread (due to hitting a breakpoint or stepping
+    through code), you can evaluate expressions in the context of that thread's
+    stack frame.
     </p>
     <ol>
       <li>
@@ -44,6 +44,7 @@
         chosen).
       </li>
     </ol>
+    <p><strong>Note:</strong> Evaluations cannot be performed in threads that have been manually suspended.</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/concepts-10.htm">Debugger</a><br>
