--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-1.htm
@@ -59,6 +59,7 @@
      <a href="tips-2.htm">Templates</a> <br>
      <a href="tips-12.htm">Refactoring and restructuring</a> <br>
      <a href="tips-9.htm">Java Project Classpath</a> <br>
+     <a href="tips-11.htm">Debugging</a> <br>
      <a href="tips-10.htm">JUnit</a> <br>
     
     </p>
