*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-137.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-137.htm
@@ -17,7 +17,7 @@
       stack frame in the Variables view.
     </p>
     <p>
-      The Variables view shows the value of simple variables.&nbsp; Complex
+      The Variables view shows the value of primitive types.&nbsp; Complex
       variables can be examined by expanding them to show their members.
     </p>
     <p>
