--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144a.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144a.htm
@@ -13,7 +13,7 @@
       Removing breakpoints
     </h1>
     <p>
-      Line breakpoints are set on an executable line of a program.
+      Breakpoints can be easily removed when you no longer need them.
     </p>
     <ol>
       <li>
@@ -21,11 +21,16 @@
       </li>
       <li>
         Directly to the left of the line where you want to remove the breakpoint, open the marker bar pop-up menu and select <strong>Remove Breakpoint</strong>. The breakpoint is
-        removed from the workbench.
+        removed from the workbench.&nbsp; You can also double-click directly on
+        the breakpoint icon to remove it.
       </li>
     </ol>
     Breakpoints can also be removed in the <strong>Breakpoints view</strong>. Select the breakpoint(s) to be removed and from the context menu select <strong>Remove</strong>.<br>
-     All breakpoints can be removed from the workbench using the <strong>Remove All</strong> action in the context menu of the <strong>Breakpoints view</strong>. 
+     All breakpoints can be removed from the workbench using the <strong>Remove All</strong> action in the context menu of the <strong>Breakpoints view</strong>.
+    <p>If you find yourself frequently adding and removing a breakpoint in the
+    same place, consider disabling the breakpoint when you don't need it (using <strong>Disable
+    Breakpoint </strong>in the breakpoint context menu or the <strong>Breakpoints view</strong>)
+    and enabling it when needed again.&nbsp;&nbsp;</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
     <a href="../concepts/concepts-10.htm">Debugger</a><br>
