--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144b.htm
@@ -13,32 +13,37 @@
       Enabling and disabling breakpoints
     </h1>
     <p>
-      Do one of the following sets of tasks:
+      Breakpoints can be enabled and disabled as needed.&nbsp; When a breakpoint is enabled, thread execution suspends before that line of code is executed.&nbsp;
+      When a breakpoint is disabled, thread execution is not suspended by the
+      presence of the breakpoint.
+    </p>
+    <p>
+      To disable a breakpoint:
     </p>
     <ol>
       <li>
-        In the editor area, open the file where you want to enable or disable a breakpoint.
+        Locate the breakpoint in the marker bar of an editor or in the <strong>Breakpoints view</strong>.
       </li>
       <li>
-        Directly to the left of the line where you want to add the breakpoint, open the marker bar pop-up menu and select <strong>Enable Breakpoint</strong> or <strong>Disable
-        Breakpoint</strong> depending on the current state of the breakpoint.
+        Open the breakpoint's context menu and select <strong>Disable
+        Breakpoint</strong>.
+      </li>
+      <li>
+        The breakpoint image will change to a white circle.
       </li>
     </ol>
+    <p>To enable the breakpoint:</p>
     <ol>
       <li>
-        In the <strong>Breakpoints view</strong> select the breakpoint(s) to be enabled or disabled.
+        Locate the breakpoint in the marker bar of an editor or in the <strong>Breakpoints view</strong>.
       </li>
       <li>
-        In the context menu of the view, select <strong>Enable</strong> or <strong>Disable</strong>.
+        Open the breakpoint's context menu and select <strong>Enable Breakpoint</strong>.
+      </li>
+      <li>
+        The breakpoint image will change back to a blue circle.
       </li>
     </ol>
-    <p>
-      If the breakpoint is enabled, its image will be a blue circle and if it is disabled the image will be a white circle
-    </p>
-    <p>
-      While the breakpoint is enabled, thread execution suspends before that line of code is executed. The debugger selects the thread that has suspended and displays the stack
-      frames on that thread&#39;s stack. The line where the breakpoint was set is highlighted in the editor in the Debug perspective.
-    </p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
     <a href="../concepts/concepts-10.htm">Debugger</a><br>
