--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-145.htm
@@ -13,7 +13,8 @@
       Setting method breakpoints
     </h1>
     <p>
-      Method breakpoints can be set on methods of binary types.
+      Method breakpoints are used when working with types that have no source
+    code (binary types).
     </p>
     <ol>
       <li>
@@ -27,27 +28,13 @@
         was selected.
       </li>
       <li>
-        While the breakpoint is enabled, thread execution suspends when the method is entered, before any line in the method is executed. The breakpoint can be set to break on
-        exit as well. In the Breakpoints view, select the breakpoint and from the context menu toggle the Exit item.
+        While the breakpoint is enabled, thread execution suspends when the method is entered, before any line in the method is executed.&nbsp;
       </li>
     </ol>
-    <p>
-      To remove the breakpoint, do one of the following:
-    </p>
-    <ul>
-      <li>
-        double-click the breakpoint in the marker bar
-      </li>
-      <li>
-        select <strong>Remove</strong> from the breakpoint&#39;s pop-up menu in the marker bar
-      </li>
-      <li>
-        select the breakpoint in the Breakpoints view and click the <strong>Remove</strong> button
-      </li>
-      <li>
-        select <strong>Remove</strong> from its pop-up menu in the Breakpoints view
-      </li>
-    </ul>
+    <p>Method breakpoints can also be setup to break on method exit.&nbsp; In the Breakpoints view, select the breakpoint and toggle the
+    <strong>Exit</strong>&nbsp; item in its context menu.</p>
+    <p>Method breakpoints can be removed, enabled, and disabled just like line
+    breakpoints.</p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
       <a href="../concepts/cbrkpnts.htm">Breakpoints</a>
