--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-146.htm
@@ -16,6 +16,9 @@
       A hit count can be applied to line breakpoints, exception breakpoints, watchpoints and method breakpoints. When a hit count is applied to a breakpoint, the breakpoint
       suspends execution of a thread the <em>n</em>th time it is hit, but never again, until it is re-enabled or the hit count is changed or disabled.
     </p>
+    <p>
+      To set a hit count on a breakpoint:
+    </p>
     <ol>
       <li>
         Select the breakpoint to which a hit count is to be added.
