--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-147.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-147.htm
@@ -13,13 +13,17 @@
       Catching Java exceptions
     </h1>
     <p>
-      It is possible to suspend the execution of thread when an exception is thrown by specifying an exception. Execution can be suspended at locations where the exception is
+      It is possible to suspend the execution of thread when an exception is thrown by specifying an
+      exception breakpoint. Execution can be suspended at locations where the exception is
       uncaught, caught, or both.
     </p>
     <ol>
       <li>
-        In the Breakpoints view, click the <strong>Add Java Exception Breakpoint</strong> button or use the equivalent menu item in the context or Run menu. The
-        Add Java Exception Breakpoint page opens.
+        Choose <strong>Add Java Exception Breakpoint</strong>  from the
+        Breakpoints view or the workbench Run menu.&nbsp;&nbsp;
+      </li>
+      <li>
+        A dialog listing all of the available exceptions is shown.
       </li>
       <li>
         Either type the name of the exception you want to catch or select it from the list.
@@ -37,7 +41,8 @@
       </li>
     </ol>
     <p>
-      <strong>Note:</strong> Exception breakpoints can be enabled and disabled and have hit counts set like a regular breakpoint.
+      <strong>Note:</strong> Exception breakpoints can be enabled and disabled and have hit counts
+    just like regular breakpoints.
     </p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
