--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-149.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-149.htm
@@ -13,39 +13,34 @@
       Creating a Java scrapbook page
     </h1>
     <p>
-      The scrapbook allows Java expressions, to be run, inspected, and displayed, under the control of the debugger. Breakpoints and exceptions are active as in a regular debug
+      The scrapbook allows Java expressions, to be run, inspected, and displayed under the control of the debugger. Breakpoints and exceptions
+      behave as they do in a regular debug
       session.
     </p>
     <p>
-      A VM is launched for each scrapbook page in which expressions are being evaluated. The first time an expression is evaluated in a scrapbook page after it is opened, a VM is
+      Code is edited on a scrapbook page.&nbsp; A VM is launched for each scrapbook page in which expressions are being evaluated. The first time an expression is evaluated in a scrapbook page after it is opened, a VM is
       launched. The VM for a page will remain active until the page is closed, terminated explicitly (in the debugger or via the <strong>Stop the Evaluation</strong> button in the
       editor toolbar), or when a <em>System.exit()</em> is evaluated.
     </p>
-    <ol>
-      <li>
-        From the workbench window, do one of the following: 
+    <p>
+      There are several ways to open the New Java Scrapbook Page
+      wizard.&nbsp;&nbsp;
+    </p>
         <ul>
           <li>
-            From the drop-down menu on the <strong><strong>Open The New Wizard</strong></strong> button in the workbench toolbar, select <strong>Other</strong>. Then select
-            <strong>Java</strong> on the left, and on the right, select <strong>Scrapbook Page</strong>. Then click <strong><strong>Next</strong></strong>.
-          </li>
-          <li>
-            Click the <strong><strong>Open The New Wizard</strong></strong> button; then in the left pane, select <strong>Java</strong>, and in the right pane, select
-            <strong>Scrapbook Page</strong>. Then click <strong><strong>Next</strong></strong>.
+            Click the <strong>Create a Scrapbook Page</strong> button in the workbench toolbar.
           </li>
           <li>
             From the menu bar in the Java Perspective, select <strong>File</strong> &gt; <strong>New</strong> &gt; <strong>Scrapbook Page</strong>.
           </li>
           <li>
             From the menu bar in any non-Java Perspective, select <strong>File</strong> &gt; <strong>New</strong> &gt; <strong>Other</strong>. Then select <strong>Java</strong> on
-            the left, and on the right, select <strong>Scrapbook Page</strong>. Then click <strong><strong>Next</strong></strong>.
-          </li>
-          <li>
-            Click the <strong><strong>Create a Scrapbook Page</strong></strong> button in the workbench toolbar.<br>
-             The New Java Scrapbook Page wizard opens.
+            the left, and on the right, select <strong>Scrapbook Page</strong>. Then click
+            <strong>Next</strong>.
           </li>
         </ul>
-      </li>
+    Once you've opened the New Java Scrapbook Page wizard:.
+    <ol>
       <li>
         In the <strong><strong>Enter or select the folder</strong> field</strong>, type or click <strong>Browse</strong> to select the container for the new page.
       </li>
