--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-150.htm
@@ -17,13 +17,17 @@
     </p>
     <ol>
       <li>
-        In the scrapbook page, either type an expression or highlight an existing expression to be inspected. For example: System.getProperties()
+        In the scrapbook page, either type an expression or highlight an existing expression to be inspected. For example: <code>System.getProperties();</code>
       </li>
       <li>
-        Either click the <strong>Inspect</strong> button in the toolbar or select <strong>Inspect</strong> from the selection&#39;s pop-up menu.
+        Click the <strong>Inspect</strong> button in the toolbar (or select <strong>Inspect</strong> from the selection&#39;s pop-up
+        menu).
       </li>
       <li>
-        The result of the inspection appears in the Expressions view, which opens if it is not already visible. The result can be inspected like a variable in the debugger (for
+        The result of the inspection appears in the Expressions view, which opens if it is not already visible.&nbsp;
+      </li>
+      <li>
+ The result can be inspected like a variable in the debugger (for
         example, children of the result can be expanded).
       </li>
     </ol>
