--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-151.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-151.htm
@@ -17,16 +17,16 @@
     </p>
     <ol>
       <li>
-        In the scrapbook page, either type an expression or highlight an existing expression to be displayed. For example: System.getProperties()
+        In the scrapbook page, either type an expression or highlight an existing expression to be displayed. For example: <code>System.getProperties();</code>
       </li>
       <li>
-        Either click the <strong>Display</strong> button in the toolbar or select <strong>Display</strong> from the selection&#39;s pop-up menu.
+        Click the <strong>Display</strong> button in the toolbar (or select <strong>Display</strong> from the selection&#39;s pop-up menu.)
       </li>
       <li>
         The result of the evaluation appears highlighted in the scrapbook editor. The result displayed is either 
         <ul>
           <li>
-            the value obtained by sending toString() to the result of the evaluation, or
+            the value obtained by sending <code>toString()</code> to the result of the evaluation, or
           </li>
           <li>
             when evaluating a primitive data type (e.g., an <em>int</em> ), the result is the simple value of the result.
@@ -39,11 +39,11 @@
     </p>
     <ul>
       <li>
-        Type and <em>highlight new java.util.Date()</em> in the editor, and click <strong>Display</strong>. A result such as <em>(java.util.Date) Tue Jun 12
-        14:03:17 CDT 2001</em> appears in the editor.
+        Type and highlight <code>new java.util.Date()</code> in the editor, and click <strong>Display</strong>. A result such as <code>(java.util.Date) Tue Jun 12
+        14:03:17 CDT 2001</code> appears in the editor.
       </li>
       <li>
-        As another example, type and highlight <em>3 + 4</em> in the editor, and press <strong>Display</strong>. The result <em>(int) 7</em> is displayed in the
+        As another example, type and highlight <code>3 + 4</code> in the editor, and press <strong>Display</strong>. The result <code>(int) 7</code> is displayed in the
         editor.
       </li>
     </ul>
