--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-153.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-153.htm
@@ -10,18 +10,16 @@
   </head>
   <body>
     <h1>
-      Using content assist/code assist
+      Using code assist
     </h1>
     <p>
-      The scrapbook editor supports code assist.
+      The scrapbook editor supports code assist similarly to the regular Java
+      editor.
     </p>
     <p>
       For example, type&nbsp;<em>TestCase&nbsp;</em>in the scrapbook editor and press <kbd>Ctrl+Space</kbd>. Code assist prompts you with possible completions.
     </p>
     <img src="../images/tasks-46.gif" height="182" width="381" alt="A Java editor with a content assist window at the caret position"> 
-    <p>
-      Content Assist/Code Assist
-    </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
        <a href="../reference/ref-143.htm">Java Content Assist</a>
