--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-154.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-154.htm
@@ -10,10 +10,15 @@
   </head>
   <body>
     <h1>
-      Using Error Reporting
+      Scrapbook error reporting
     </h1>
     <p>
-      Java scrapbook errors are reported in the editor.
+      Java scrapbook errors are reported in the scrapbook page editor.
+    </p>
+    <p>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+      <a href="tasks-155.htm">Viewing compilation errors</a><br>
+      <a href="tasks-156.htm">Viewing runtime exceptions</a><br>
     </p>
     <p>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
