--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-156.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-156.htm
@@ -16,7 +16,7 @@
       If an expression you evaluate causes a runtime exception, the exception will be reported in the editor. For example:
     </p>
     <p>
-      Type and select the expression <em>Object x = null; x.toString()</em> in the editor and click <strong>Display</strong> in the toolbar.
+      Type and select the expression <code>Object x = null; x.toString()</code> in the editor and click <strong>Display</strong> in the toolbar.
     </p>
     <p>
       The error message:
