--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -14,7 +14,14 @@
     </h1>
     <ul>
       <li>
-      When a thread is suspended and the cursor is placed over a variable in the Java editor, the value of that variable is displayed as hover help.<br>
+      When a thread is suspended and the cursor is placed over a variable in the Java editor, the value of that variable is displayed as hover help.
+      </li>
+      <li>
+      If you find yourself frequently adding and removing a breakpoint in the
+      same place, consider disabling the breakpoint when you don't need it
+      (using <strong>Disable Breakpoint </strong>in the breakpoint context menu
+      or the <strong>Breakpoints view</strong>) and enabling it when needed
+      again.&nbsp;<br>
       </li>
     </ul>
     <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
