--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144c.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-144c.htm
@@ -8,42 +8,29 @@
 </head>
 <body>
 <h1> Managing conditional breakpoints </h1>
-<ol>
-  <li> Do one of the following sets of tasks: 
-    <ul>
-      <li> From the editor area: 
-        <ol>
-          <li> In the editor area, open the file where you want to set a condition 
-            for a breakpoint. </li>
-          <li> Directly to the left of the line where you want to add the breakpoint, 
-            open the marker bar pop-up menu and select <strong>Breakpoint Properties...</strong>. 
-          </li>
-        </ol>
+<p> 
+      An enabling condition can be applied to line breakpoints, exception breakpoints, watchpoints and method breakpoints. When an
+enabling condition is applied to a breakpoint, the breakpoint
+      suspends execution of a thread only when its enabling condition is true. </p>
+<p> To set a condition on a breakpoint: </p>
+    <ol>
+      <li>
+        Select the breakpoint to which a hit count is to be added.
       </li>
-      <li> From the breakpoints view: 
-        <ol>
-          <li> In the <strong>Breakpoints view</strong> select the breakpoint 
-            to set the condition for </li>
-          <li> In the context menu of the view, select <strong>Properties...</strong>. 
-          </li>
-        </ol>
+      <li>
+        From the breakpoint&#39;s pop-up menu, select <strong>Properties...</strong>
       </li>
-    </ul>
-  </li>
   <li> A Breakpoint properties dialog will open. </li>
-  <li> In the properties dialog, check the <strong>Enable Condition</strong> checkbox. 
-    To disable the condition, uncheck this checkbox. </li>
+  <li> In the properties dialog, check the <strong>Enable Condition</strong> checkbox.&nbsp; </li>
   <li> In the <strong>Condition</strong> field enter the boolean expression for 
     the breakpoint condition. </li>
-  <li> Click <strong>Ok</strong> to close the dialog and commit the changes. While 
+  <li> Click <strong>OK</strong> to close the dialog and commit the changes. While 
     the breakpoint is enabled, thread execution suspends before that line of code 
-    is executed if the breakpoint condition evaluates to <em>true</em>. The debugger 
-    selects the thread that has suspended and displays the stack frames on that 
-    thread&#39;s stack. The line where the breakpoint was set is highlighted in 
-    the editor in the Debug perspective.<br>
-    A conditional breakpoint has a question mark overlay on the breakpoint icon. 
+    is executed if the breakpoint condition evaluates to <em>true</em>.&nbsp; 
   </li>
-</ol>
+    </ol>
+<p>
+    A conditional breakpoint has a question mark overlay on the breakpoint icon.</p>
 <p> <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"> 
   <br>
   <a href="../concepts/concepts-10.htm">Debugger</a><br>
