--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-152.htm
@@ -16,10 +16,11 @@
       Running an expression evaluates an expression but does not display a result.
     </p>
     <p>
-      If you select the expression to run and click the <strong>Run</strong> button in the toolbar, no result is displayed, the code is simply run.
+      If you select the expression to run and click the <strong>Run</strong> button in the toolbar, no result is
+      displayed, but the code is run.&nbsp;&nbsp;
     </p>
     <p>
-      For example, if you type and highlight <em>System.out.println(&quot;Hello World&quot;</em>, and click the <strong>Run</strong> button, <em>Hello World</em>
+      For example, if you type and highlight <code>System.out.println(&quot;Hello World&quot;)</code>, and click the <strong>Run</strong> button, <em>Hello World</em>
       appears in the Console view, but no result is displayed in the scrapbook editor or the Expressions view.
     </p>
     <p>
