--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-155.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-155.htm
@@ -13,10 +13,11 @@
       Viewing compilation errors
     </h1>
     <p>
-      If an expression you select to evaluate has a compilation error, it will be reported in the scrapbook editor.
+      If you try to evaluate an expression containing a compilation error, it
+      will be reported in the scrapbook editor.
     </p>
     <p>
-      For example, type and select the (invalid) expression <em>System.println(&quot;hi&quot;)</em> in the editor and click <strong>Run</strong> in the toolbar.
+      For example, type and select the (invalid) expression <code>System.println(&quot;hi&quot;)</code> in the editor and click <strong>Run</strong> in the toolbar.
     </p>
     <p>
       The error message <em>The method println(java.lang.String) is undefined for the type java.lang.System</em> appears in the editor at the point of the error.
